# symlink_gui

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.roo/: mcp.json
core/: symlink.py
ui/: file_tree.py  main_window.py
